--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <main>
 
     <article>
-      <div class="card-1 island max-length">
+      <div class="card-1 island push-1-2 max-length">
         <h2 class="title-1">Watermelon</h2>
         <p>Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
       </div>
     </article>
 
     <article>
-      <div class="card-2 island max-length">
+      <div class="card-2 island push-1-2 max-length">
         <h2 class="title-2">Starfruit</h2>
         <p>The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
       </div>
