--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 
   <main>
 
-    <article>
-      <div class="card-1 island push-1-2 max-length">
-        <h2 class="title-1">Watermelon</h2>
+    <article class="card-1">
+      <div class="island gutter push-1-2 max-length">
+        <h2 class="title-1 zetta push-0">Watermelon</h2>
         <p>Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
       </div>
     </article>
 
-    <article>
-      <div class="card-2 island push-1-2 max-length">
-        <h2 class="title-2">Starfruit</h2>
+    <article class="card-2">
+      <div class="island gutter push-1-2 max-length">
+        <h2 class="title-2 zetta push-0">Starfruit</h2>
         <p>The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
       </div>
     </article>
 
-    <article>
-      <div class="card-3 island max-length">
-        <h2 class="title-3">Persimmon</h2>
+    <article class="card-3">
+      <div class="island gutter max-length">
+        <h2 class="title-3 zetta push-0">Persimmon</h2>
         <p>The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.</p>
       </div>
     </article>
